--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/cli-service": "^4.5.11",
     "node-sass": "^4.14.1",
     "sass-loader": "^7.1.0",
+    "vue-cookies": "^1.7.4",
     "vue-template-compiler": "^2.5.21"
   },
   "postcss": {
