Redirect if not root url
Bug update

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,5 +8,5 @@
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.html [L]
+    RewriteRule ^ / [L,R=301]
 </IfModule>
